@@ -62,6 +62,21 @@ NAME=$(basename $JETTY_BASE)
 JETTY_PID=${JETTY_BASE}/${NAME}.pid
 JETTY_STATE=${JETTY_BASE}/${NAME}.state
 ```
+配置
+```
+
+JVM_OPS_CORE="-Xms1g -Xmx2g -XX:NewSize=256m -XX:MaxNewSize=512m -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=512m -XX:AutoBoxCacheMax=20000"
+JVM_OPS_LOG="-Xloggc:/www/log/gc-www.log -XX:+HeapDumpOnOutOfMemoryError"
+JVM_OPS_PLOG="-XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC -XX:+PrintTenuringDistribution -XX:+PrintGCApplicationStoppedTime -XX:+PrintPromotionFailure -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=120 -XX:GCLogFileSize=500M"
+JMX_HOST=192.168.1.1
+JMX_PORT=50001
+JVM_OPS_JMX="-Dcom.sun.management.jmxremote -Djava.rmi.server.hostname=${JMX_HOST} -Dcom.sun.management.jmxremote.port=${JMX_PORT} -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false"
+JVM_OPS_APP= "-Dspring.profiles.active=test"
+
+JAVA_OPTIONS="${JVM_OPS_CORE} ${JVM_OPS_LOG} ${JVM_OPS_PLOG} ${JVM_OPS_JMX} ${JVM_OPS_APP"
+JETTY_ARGS="jetty.http.port=8081"
+
+```
 ## jetty jvm参数配置start.d/jvm.ini
 ```
 --module=jvm
